<resources>
    <string name="app_name">Phone Service Logs</string>
    <string name="home">Home</string>
    <string name="services">Services</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_service">Add Service</string>
    <string name="customer_name">အမည်</string>
    <string name="ph_brand">အမျိုးစား</string>
    <string name="ph_model">မော်ဒယ်</string>
    <string name="collected_date">အပ်သည့်ရက်</string>
    <string name="repair_case">ပြုပြင်ရန်</string>
    <string name="repair_done_or_not">ပြုပြင်ပြီး</string>
    <string name="is_taken">ရွေးပြီး</string>
    <string name="taken_date">ရွေးသည့်ရက်</string>
    <string name="cost">ကျသင့်ငွေ</string>
    <string name="contactNumber">ဆက်သွယ်ရန်</string>
    <string name="no_data">No Data</string>
    <string name="edit_service">Edit Service</string>
    <string name="is_urgent">အရေးကြီး</string>
    <string name="collected_date_label">အပ်သည့်ရက် -</string>
    <string name="taken_date_label">ရွေးသည့်ရက် -</string>
    <string name="menu_save">Save</string>
    <string name="note">မှတ်ချက်</string>
    <string name="status">Status</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="separator">:</string>
    <string name="service_info">Service Info</string>
    <string name="edit">Edit</string>
    <string name="close">Close</string>
</resources>