<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.taureanx.phoneservicelogs.subfragments.viewmodels.AddServiceViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            tools:context=".subfragments.AddServiceFragment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cusNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_name"
                android:layout_marginVertical="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_person"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.serviceData.cusName}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_brand_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/ph_brand"
                android:layout_marginVertical="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cusNameField"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/phone_brand_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:inputType="none"
                    android:text="@={viewModel.serviceData.phBrand}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_model_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/ph_model"
                android:layout_marginVertical="10dp"
                android:autofillHints="name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_brand_field"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.serviceData.phModel}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/repair_case_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repair_case"
                android:layout_marginVertical="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_note_alt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_model_field"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:text="@={viewModel.serviceData.repair_case}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_no_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contactNumber"
                android:layout_marginVertical="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_phone_callback"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/repair_case_field"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:text="@={viewModel.serviceData.contactPhone}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/repair_cost_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cost"
                android:layout_marginVertical="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_money"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_no_field"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@={viewModel.serviceData.cost}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/is_urgent_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_urgent"
                android:checked="@={viewModel.serviceData.urgent}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/repair_cost_field"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/is_repaired_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repair_done_or_not"
                android:layout_marginStart="10dp"
                android:checked="@={viewModel.serviceData.repaired}"
                app:layout_constraintStart_toEndOf="@id/is_urgent_checkbox"
                app:layout_constraintTop_toBottomOf="@id/repair_cost_field"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/is_taken_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_taken"
                android:layout_marginStart="10dp"
                android:checked="@={viewModel.serviceData.taken}"
                app:layout_constraintStart_toEndOf="@id/is_repaired_checkbox"
                app:layout_constraintTop_toBottomOf="@id/repair_cost_field"/>

            <TextView
                android:id="@+id/collected_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collected_date_label"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/is_urgent_checkbox"/>
            <TextView
                android:id="@+id/collected_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                setFormattedDate="@{viewModel.serviceData.collectedDate}"
                app:layout_constraintStart_toEndOf="@id/collected_date_label"
                app:layout_constraintTop_toBottomOf="@id/is_urgent_checkbox"
                tools:text="12.2.2022"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/note_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note"
                android:layout_marginVertical="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/collected_date_label"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:inputType="textMultiLine"
                    android:text="@={viewModel.serviceData.note}"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>