<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.taureanx.phoneservicelogs.dialog_fragments.DialogViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_info"
                android:textStyle="bold"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:layout_marginTop="40dp"
                android:text="@string/customer_name"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/titleText" />

            <TextView
                android:id="@+id/separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/separator"
                app:layout_constraintBottom_toBottomOf="@id/nameLabel"
                app:layout_constraintStart_toEndOf="@id/nameLabel"
                app:layout_constraintTop_toTopOf="@id/nameLabel"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/cusName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@{viewModel.serviceData.cusName}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/separator"
                app:layout_constraintTop_toTopOf="@id/separator"
                tools:text="ထက်ထက်ထွန်း" />

            <TextView
                android:id="@+id/brandLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/ph_brand"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/nameLabel"
                app:layout_constraintTop_toBottomOf="@id/cusName" />

            <TextView
                android:id="@+id/separator1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator"
                app:layout_constraintBottom_toBottomOf="@id/brandLabel"
                app:layout_constraintEnd_toEndOf="@+id/separator"
                app:layout_constraintTop_toTopOf="@id/brandLabel" />

            <TextView
                android:id="@+id/phoneBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@{viewModel.serviceData.phBrand}"
                app:layout_constraintStart_toEndOf="@id/separator1"
                app:layout_constraintTop_toTopOf="@id/separator1"
                tools:text="OPPO" />

            <TextView
                android:id="@+id/modelLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/ph_model"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/brandLabel"
                app:layout_constraintTop_toBottomOf="@id/phoneBrand" />

            <TextView
                android:id="@+id/separator2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator"
                app:layout_constraintBottom_toBottomOf="@id/modelLabel"
                app:layout_constraintEnd_toEndOf="@+id/separator1"
                app:layout_constraintTop_toTopOf="@id/modelLabel" />

            <TextView
                android:id="@+id/phoneModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@{viewModel.serviceData.phModel}"
                app:layout_constraintStart_toEndOf="@id/separator2"
                app:layout_constraintTop_toTopOf="@id/separator2"
                tools:text="A12" />

            <TextView
                android:id="@+id/caseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/repair_case"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/modelLabel"
                app:layout_constraintTop_toBottomOf="@id/phoneModel" />

            <TextView
                android:id="@+id/separator3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator"
                app:layout_constraintBottom_toBottomOf="@id/caseLabel"
                app:layout_constraintEnd_toEndOf="@+id/separator2"
                app:layout_constraintTop_toTopOf="@id/caseLabel" />

            <TextView
                android:id="@+id/repairCase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@{viewModel.serviceData.repair_case}"
                app:layout_constraintStart_toEndOf="@id/separator3"
                app:layout_constraintTop_toTopOf="@id/separator3"
                tools:text="No Power" />

            <TextView
                android:id="@+id/contactLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/contactNumber"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/caseLabel"
                app:layout_constraintTop_toBottomOf="@id/repairCase" />

            <TextView
                android:id="@+id/separator4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator"
                app:layout_constraintBottom_toBottomOf="@id/contactLabel"
                app:layout_constraintEnd_toEndOf="@+id/separator3"
                app:layout_constraintTop_toTopOf="@id/contactLabel" />

            <TextView
                android:id="@+id/contactNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@{viewModel.serviceData.contactPhone}"
                app:layout_constraintStart_toEndOf="@id/separator4"
                app:layout_constraintTop_toTopOf="@id/separator4"
                tools:text="09256343863" />

            <TextView
                android:id="@+id/costLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/cost"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/contactLabel"
                app:layout_constraintTop_toBottomOf="@id/contactNo" />

            <TextView
                android:id="@+id/separator5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator"
                app:layout_constraintBottom_toBottomOf="@id/costLabel"
                app:layout_constraintEnd_toEndOf="@+id/separator4"
                app:layout_constraintTop_toTopOf="@id/costLabel" />

            <TextView
                android:id="@+id/cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@{viewModel.serviceData.cost}"
                app:layout_constraintStart_toEndOf="@id/separator5"
                app:layout_constraintTop_toTopOf="@id/separator5"
                tools:text="25000" />

            <TextView
                android:id="@+id/urgentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/is_urgent"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/costLabel"
                app:layout_constraintTop_toBottomOf="@id/cost" />

            <TextView
                android:id="@+id/separator6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator"
                app:layout_constraintBottom_toBottomOf="@id/urgentLabel"
                app:layout_constraintEnd_toEndOf="@+id/separator5"
                app:layout_constraintTop_toTopOf="@id/urgentLabel" />

            <TextView
                android:id="@+id/isUrgent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                app:setStatusText="@{viewModel.serviceData.urgent}"
                app:layout_constraintStart_toEndOf="@id/separator6"
                app:layout_constraintTop_toTopOf="@id/separator6"
                tools:text="YES" />

            <TextView
                android:id="@+id/isRepairedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/repair_done_or_not"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/urgentLabel"
                app:layout_constraintTop_toBottomOf="@id/isUrgent" />

            <TextView
                android:id="@+id/separator7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator"
                app:layout_constraintBottom_toBottomOf="@id/isRepairedLabel"
                app:layout_constraintEnd_toEndOf="@+id/separator6"
                app:layout_constraintTop_toTopOf="@id/isRepairedLabel"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/isRepaired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                app:setStatusText="@{viewModel.serviceData.repaired}"
                app:layout_constraintStart_toEndOf="@id/separator7"
                app:layout_constraintTop_toTopOf="@id/separator7"
                tools:text="YES" />

            <TextView
                android:id="@+id/isTakenLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/is_taken"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/isRepairedLabel"
                app:layout_constraintTop_toBottomOf="@id/isRepaired" />

            <TextView
                android:id="@+id/separator8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator"
                app:layout_constraintBottom_toBottomOf="@id/isTakenLabel"
                app:layout_constraintEnd_toEndOf="@+id/separator7"
                app:layout_constraintTop_toTopOf="@id/isTakenLabel" />

            <TextView
                android:id="@+id/isTaken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                app:setStatusText="@{viewModel.serviceData.taken}"
                app:layout_constraintStart_toEndOf="@id/separator8"
                app:layout_constraintTop_toTopOf="@id/separator8"
                tools:text="NO" />

            <TextView
                android:id="@+id/collectedDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/collected_date_label"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/isTakenLabel"
                app:layout_constraintTop_toBottomOf="@id/isTaken" />

            <TextView
                android:id="@+id/separator9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator"
                app:layout_constraintBottom_toBottomOf="@id/collectedDateLabel"
                app:layout_constraintEnd_toEndOf="@+id/separator8"
                app:layout_constraintTop_toTopOf="@id/collectedDateLabel" />

            <TextView
                android:id="@+id/collectedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                app:setFormattedDate="@{viewModel.serviceData.collectedDate}"
                app:layout_constraintStart_toEndOf="@id/separator9"
                app:layout_constraintTop_toTopOf="@id/separator9"
                tools:text="12.3.2022" />

            <TextView
                android:id="@+id/takenDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/taken_date_label"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/collectedDateLabel"
                app:layout_constraintTop_toBottomOf="@id/collectedDate" />

            <TextView
                android:id="@+id/separator10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator"
                app:layout_constraintBottom_toBottomOf="@id/takenDateLabel"
                app:layout_constraintEnd_toEndOf="@+id/separator9"
                app:layout_constraintTop_toTopOf="@id/takenDateLabel" />

            <TextView
                android:id="@+id/takenDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                app:setFormattedDate="@{viewModel.serviceData.takenDate}"
                app:layout_constraintStart_toEndOf="@id/separator10"
                app:layout_constraintTop_toTopOf="@id/separator10"
                tools:text="" />

            <TextView
                android:id="@+id/noteLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/note"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/takenDateLabel"
                app:layout_constraintTop_toBottomOf="@id/takenDate" />

            <TextView
                android:id="@+id/separator11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator"
                app:layout_constraintBottom_toBottomOf="@id/noteLabel"
                app:layout_constraintEnd_toEndOf="@+id/separator10"
                app:layout_constraintTop_toTopOf="@id/noteLabel"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@{viewModel.serviceData.note}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/separator11"
                app:layout_constraintTop_toTopOf="@id/separator11"
                tools:text="ဖုန်းကဒ်မပါ" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editServiceBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:layout_marginVertical="16dp"
                app:icon="@drawable/ic_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/note"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dismissDialogBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"
                app:icon="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/editServiceBtn"
                app:layout_constraintBottom_toBottomOf="@id/editServiceBtn"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>